--- a/erb/frontend-react-js.env.erb
+++ b/erb/frontend-react-js.env.erb
@@ -1,5 +1,10 @@
 REACT_APP_BACKEND_URL=https://4567-<%= ENV['GITPOD_WORKSPACE_ID'] %>.<%= ENV['GITPOD_WORKSPACE_CLUSTER_HOST'] %>
+REACT_APP_FRONTEND_URL=https://3000-<%= ENV['GITPOD_WORKSPACE_ID'] %>.<%= ENV['GITPOD_WORKSPACE_CLUSTER_HOST'] %>
+REACT_APP_API_GATEWAY_ENDPOINT_URL=https://jy3wjqtjf5.execute-api.us-east-2.amazonaws.com
 REACT_APP_AWS_PROJECT_REGION=<%= ENV['AWS_DEFAULT_REGION'] %>
 REACT_APP_AWS_COGNITO_REGION=<%= ENV['AWS_DEFAULT_REGION'] %>
 REACT_APP_AWS_USER_POOLS_ID=us-east-2_UFbN0js5l
 REACT_APP_CLIENT_ID=5uikpgv5is2o7nbicpirre4fj5
+
+
+
